--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">test</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="txt_btn_google">Google</string>
+    <string name="txt_btn_facebook">Facebook</string>
+    <string name="don_t_have_an_account">Don`t have an Account ?</string>
+    <string name="login">Login</string>
+    <string name="txt_btn_login">Login</string>
+    <string name="forgot_pasword">Forgot Password?</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="txt_btn_sign_up">SignUp</string>
 </resources>
